[package]
name = "sandbox_sync_multibank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.2.2"
neo4rs = "0.6.2"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.104"
chrono = {version = "0.4.26", features = ["serde"] }
serde = { version = "1", features = ["derive"]}